# tedious

./: README.md  pyproject.toml  ziplogs.py
.githooks/: pre-commit
tedious/: __init__.py  intent_logger.py  renamer.py  ziplogs.py
