[tool.poetry]
name = "tedious"
version = "0.2.0"
description = ""
authors = ["mdvtkr <mdvtkr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.7, < 3.12"
rich = "^13.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry_bumpversion.file."tedious/__init__.py"]
